--- a/index.html
+++ b/index.html
@@ -28,19 +28,28 @@
             <div style="font-size:28px; color:blue">Espacio y tiempo</div> 
             <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
             <img src="images/caoitulo2.jpg" style="width:20%; margin-top: 10px;" alt="">
-            <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">Como las teorias de los cientificos iban cambiando, miraban  el universo antes y creian que 
-            la Tierra era el centro del universo. despues desmostraron que los planetas giraban entorno al sol, gracias a
-            Nicolas Copernico.
-            Dos astronomos vieron las luna de jupiter, galileo y kepler.
-            Despues llego Newton y creo las leyes de Newton, el calculo y calculo las orbitas de los planetas,
-            menos mercurio.
-            Hubble descubrio que el universo se expande y que las estrellas entre mas lejos azules y entre mas 
-            cerca rojas.
-            y despues llego el paspis de los paspis Ainsten Y DESCUBRIO  la orbita de mercurio</p>
+            <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
+                Einstein hiso la sugerenia revolucionaria de que  la gravedad no es una fuerza si no es consecuencia de que el Espacio
+                de que el Espacio no sea plano,el espacio tiempo esta curbado los objetos no estan forzados a moverse por la gravedad en orbitas curbadas
+                si no que lo hase en lineas geodesicas. <br>
+                la masa del sol curva el espacio tiempo y genera una orbita lineal en 4D y curba en 3D <br>
+                Otra predidsion de la teoria de la relatividad general es que el tiempo transcurre
+                mas despacio en un cuerpo de masa mas grande .<br>
+                O sea el tiempo no es absoluto  si no que depende de donde esta
+           y como se mueve el individuo. </p>
+           <iframe width="400" height="400" src="https://www.youtube.com/embed/Z7YAJTJ72UU" title="¡El Telescopio HUBBLE acaba de encontrar Algo Insólito en el Espacio Profundo!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
-    </div>
-
+        div style="font-size:28px; color:blue">el universo en expancion</div> 
+        <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
+        <img src="images/caoitulo2.jpg" style="width:20%; margin-top: 10px;" alt="">
+        <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
+friedmman demostro que no se debe esperar estatico. De hecho en 1922 varias semanas antes del descubrimiento de Edwin
+Hubble friedmman predijo exactamente lo que Hubble encontro la suposicion de que el universo parece el mismo en todas
+durante la noche y a lo largo de todas las semanas a pesar de que la tierra giraba sobre su eje y alrededor del sol.
+Esto demostro que la radiacion debia provenir de mas alla del sistema solar e incuso desde mas alla de nuetra galxia
+el universo  se expande lo suficiente lento como para como para que la atraccion gravitatoria entre las diferentes
+galxias sea capas de frenar y finalmente detener la expancion del universo
     
 </body>
 </html>
