--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
            <iframe width="400" height="400" src="https://www.youtube.com/embed/Z7YAJTJ72UU" title="¡El Telescopio HUBBLE acaba de encontrar Algo Insólito en el Espacio Profundo!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
-        div style="font-size:28px; color:blue">el universo en expancion</div> 
+        div style="font-size:28px; color:blue">el universo en expancion</div>
         <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
-        <img src="images/caoitulo2.jpg" style="width:20%; margin-top: 10px;" alt="">
+        <img src=" " style="width:20%; margin-top: 10px;" alt="">
         <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
 friedmman demostro que no se debe esperar estatico. De hecho en 1922 varias semanas antes del descubrimiento de Edwin
 Hubble friedmman predijo exactamente lo que Hubble encontro la suposicion de que el universo parece el mismo en todas
