--- a/index.html
+++ b/index.html
@@ -40,16 +40,22 @@
            <iframe width="400" height="400" src="https://www.youtube.com/embed/Z7YAJTJ72UU" title="¡El Telescopio HUBBLE acaba de encontrar Algo Insólito en el Espacio Profundo!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
-        div style="font-size:28px; color:blue">el universo en expancion</div>
+        <div style="font-size:28px; color:blue">el universo en expancion<div>
         <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
-        <img src=" " style="width:20%; margin-top: 10px;" alt="">
+        <img src="images/Universe_expansion_es.png" style="width: 10px%; margin-top: 20px;" alt="">
         <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
 friedmman demostro que no se debe esperar estatico. De hecho en 1922 varias semanas antes del descubrimiento de Edwin
 Hubble friedmman predijo exactamente lo que Hubble encontro la suposicion de que el universo parece el mismo en todas
 durante la noche y a lo largo de todas las semanas a pesar de que la tierra giraba sobre su eje y alrededor del sol.
 Esto demostro que la radiacion debia provenir de mas alla del sistema solar e incuso desde mas alla de nuetra galxia
 el universo  se expande lo suficiente lento como para como para que la atraccion gravitatoria entre las diferentes
-galxias sea capas de frenar y finalmente detener la expancion del universo
-    
+galxias sea capas de frenar y finalmente detener la expancion del universo    
 </body>
 </html>
+<div style="font-size:28px; color:blue">el principio de la incetidumbre<div>
+    <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
+    <img src="images/descarga (1).png" style="width: 10px%; margin-top: 20px;" alt="">
+    <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
+        La gente o el mundo Un cojunto de leyes cientificas que nos permiterian predecir
+         todo lo que sucederia en el universo. Lord Rayleigh y sir James Jeans sugierieron
+          que un objecto o cuerpo caliente tal como una estrella deberia irradiar a un ritmo infinito  
