--- a/index.html
+++ b/index.html
@@ -58,4 +58,11 @@ galxias sea capas de frenar y finalmente detener la expancion del universo
     <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
         La gente o el mundo Un cojunto de leyes cientificas que nos permiterian predecir
          todo lo que sucederia en el universo. Lord Rayleigh y sir James Jeans sugierieron
-          que un objecto o cuerpo caliente tal como una estrella deberia irradiar a un ritmo infinito  
+          que un objecto o cuerpo caliente tal como una estrella deberia irradiar a un ritmo infinito
+          <div style="font-size:28px; color:blue">el principio de la incetidumbre<div>
+            <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
+            <img src="images/nico.png" style="width: 10px%; margin-top: 20px;" alt="">
+            <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
+            Einstein senalo que el fenomeno conocido como movimiento irregular el movimiento irregular aleatorio de pequenas particulas polvo suspendidas en liquido
+            la mecanica cuantica nos dice que todas las particulas tanto menor es la longitud de onda de su onda correspondiente
+             las particulas materiales obedecen a lo que se llama el principio la primera categoria es la fuerza gravitatoria esta fuerza ea universal
