--- a/index.html
+++ b/index.html
@@ -1,68 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breve historia del tiempo de Stephen Hawking</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div style="padding-left: 30px; margin-top: 20px; ">
         <div>
+
             <div style="font-size:28px; color: coral;">Nuestra imagen del universo</div>
             <div style="width:50%; text-align: justify; color:green;">
                 <img src="images/capitulo1.png" style="width:20%;margin-top: 10px;" alt="">
-                <p style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-stretch:ultra-condensed">Como las teorias de los cientificos iban cambiando, miraban  el universo antes y creian que 
-                la Tierra era el centro del universo. despues desmostraron que los planetas giraban entorno al sol, gracias a
-                Nicolas Copernico.
-                Dos astronomos vieron las luna de jupiter, galileo y kepler.
-                Despues llego Newton y creo las leyes de Newton, el calculo y calculo las orbitas de los planetas,
-                menos mercurio.
-                Hubble descubrio que el universo se expande y que las estrellas entre mas lejos azules y entre mas 
-                cerca rojas.
-                y despues llego el paspis de los paspis Ainsten Y DESCUBRIO  la orbita de mercurio
+                <p
+                    style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-stretch:ultra-condensed">
+                    Como las teorias de los cientificos iban cambiando, miraban el universo antes y creian que
+                    la Tierra era el centro del universo. despues desmostraron que los planetas giraban entorno al sol,
+                    gracias a
+                    Nicolas Copernico.
+                    Dos astronomos vieron las luna de jupiter, galileo y kepler.
+                    Despues llego Newton y creo las leyes de Newton, el calculo y calculo las orbitas de los planetas,
+                    menos mercurio.
+                    Hubble descubrio que el universo se expande y que las estrellas entre mas lejos azules y entre mas
+                    cerca rojas.
+                    y despues llego el paspis de los paspis Ainsten Y DESCUBRIO la orbita de mercurio
                 </p>
             </div>
         </div>
-        <div> 
-            <div style="font-size:28px; color:blue">Espacio y tiempo</div> 
+        <div>
+            <div style="font-size:28px; color:blue">Espacio y tiempo</div>
             <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
-            <img src="images/caoitulo2.jpg" style="width:20%; margin-top: 10px;" alt="">
-            <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
-                Einstein hiso la sugerenia revolucionaria de que  la gravedad no es una fuerza si no es consecuencia de que el Espacio
-                de que el Espacio no sea plano,el espacio tiempo esta curbado los objetos no estan forzados a moverse por la gravedad en orbitas curbadas
-                si no que lo hase en lineas geodesicas. <br>
-                la masa del sol curva el espacio tiempo y genera una orbita lineal en 4D y curba en 3D <br>
-                Otra predidsion de la teoria de la relatividad general es que el tiempo transcurre
-                mas despacio en un cuerpo de masa mas grande .<br>
-                O sea el tiempo no es absoluto  si no que depende de donde esta
-           y como se mueve el individuo. </p>
-           <iframe width="400" height="400" src="https://www.youtube.com/embed/Z7YAJTJ72UU" title="¡El Telescopio HUBBLE acaba de encontrar Algo Insólito en el Espacio Profundo!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <img src="images/caoitulo2.jpg" style="width:20%; margin-top: 10px;" alt="">
+                <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
+                    Einstein hiso la sugerenia revolucionaria de que la gravedad no es una fuerza si no es consecuencia
+                    de que el Espacio
+                    de que el Espacio no sea plano,el espacio tiempo esta curbado los objetos no estan forzados a
+                    moverse por la gravedad en orbitas curbadas
+                    si no que lo hase en lineas geodesicas. <br>
+                    la masa del sol curva el espacio tiempo y genera una orbita lineal en 4D y curba en 3D <br>
+                    Otra predidsion de la teoria de la relatividad general es que el tiempo transcurre
+                    mas despacio en un cuerpo de masa mas grande .<br>
+                    O sea el tiempo no es absoluto si no que depende de donde esta
+                    y como se mueve el individuo. </p>
+                <iframe width="400" height="400" src="https://www.youtube.com/embed/Z7YAJTJ72UU"
+                    title="¡El Telescopio HUBBLE acaba de encontrar Algo Insólito en el Espacio Profundo!"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
             </div>
         </div>
         <div style="font-size:28px; color:blue">el universo en expancion<div>
-        <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
-        <img src="images/Universe_expansion_es.png" style="width: 10px%; margin-top: 20px;" alt="">
-        <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
-friedmman demostro que no se debe esperar estatico. De hecho en 1922 varias semanas antes del descubrimiento de Edwin
-Hubble friedmman predijo exactamente lo que Hubble encontro la suposicion de que el universo parece el mismo en todas
-durante la noche y a lo largo de todas las semanas a pesar de que la tierra giraba sobre su eje y alrededor del sol.
-Esto demostro que la radiacion debia provenir de mas alla del sistema solar e incuso desde mas alla de nuetra galxia
-el universo  se expande lo suficiente lento como para como para que la atraccion gravitatoria entre las diferentes
-galxias sea capas de frenar y finalmente detener la expancion del universo    
+                <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
+                    <img src="images/Universe_expansion_es.png" style="width: 10px%; margin-top: 20px;" alt="">
+                    <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
+                        friedmman demostro que no se debe esperar estatico. De hecho en 1922 varias semanas antes del
+                        descubrimiento de Edwin
+                        Hubble friedmman predijo exactamente lo que Hubble encontro la suposicion de que el universo
+                        parece el mismo en todas
+                        durante la noche y a lo largo de todas las semanas a pesar de que la tierra giraba sobre su eje
+                        y alrededor del sol.
+                        Esto demostro que la radiacion debia provenir de mas alla del sistema solar e incuso desde mas
+                        alla de nuetra galxia
+                        el universo se expande lo suficiente lento como para como para que la atraccion gravitatoria
+                        entre las diferentes
+                        galxias sea capas de frenar y finalmente detener la expancion del universo
 </body>
+
 </html>
-<div style="font-size:28px; color:blue">el principio de la incetidumbre<div>
-    <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
-    <img src="images/descarga (1).png" style="width: 10px%; margin-top: 20px;" alt="">
-    <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
-        La gente o el mundo Un cojunto de leyes cientificas que nos permiterian predecir
-         todo lo que sucederia en el universo. Lord Rayleigh y sir James Jeans sugierieron
-          que un objecto o cuerpo caliente tal como una estrella deberia irradiar a un ritmo infinito
-          <div style="font-size:28px; color:blue">el principio de la incetidumbre<div>
-            <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
-            <img src="images/nico.png" style="width: 10px%; margin-top: 20px;" alt="">
+<div class="letra-div">el principio de la incetidumbre<div>
+        <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
+            <img src="images/descarga (1).png" style="width: 10px%; margin-top: 20px;" alt="">
             <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
-            Einstein senalo que el fenomeno conocido como movimiento irregular el movimiento irregular aleatorio de pequenas particulas polvo suspendidas en liquido
-            la mecanica cuantica nos dice que todas las particulas tanto menor es la longitud de onda de su onda correspondiente
-             las particulas materiales obedecen a lo que se llama el principio la primera categoria es la fuerza gravitatoria esta fuerza ea universal
+                La gente o el mundo Un cojunto de leyes cientificas que nos permiterian predecir
+                todo lo que sucederia en el universo. Lord Rayleigh y sir James Jeans sugierieron
+                que un objecto o cuerpo caliente tal como una estrella deberia irradiar a un ritmo infinito
+            <div style="font-size:28px; color:blue">el principio de la incetidumbre<div>
+                    <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
+                        <img src="images/nico.png" style="width: 10px%; margin-top: 20px;" alt="">
+                        <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
+                            Einstein senalo que el fenomeno conocido como movimiento irregular el movimiento irregular
+                            aleatorio de pequenas particulas polvo suspendidas en liquido
+                            la mecanica cuantica nos dice que todas las particulas tanto menor es la longitud de onda de
+                            su onda correspondiente
+                            las particulas materiales obedecen a lo que se llama el principio la primera categoria es la
+                            fuerza gravitatoria esta fuerza ea universal
