--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 La gente o el mundo Un cojunto de leyes cientificas que nos permiterian predecir
                 todo lo que sucederia en el universo. Lord Rayleigh y sir James Jeans sugierieron
                 que un objecto o cuerpo caliente tal como una estrella deberia irradiar a un ritmo infinito
-            <div style="font-size:28px; color:blue">el principio de la incetidumbre<div>
+            <div style="font-size:28px; color:blue">fuerzas de la naturalesa<div>
                     <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
                         <img src="images/nico.png" style="width: 10px%; margin-top: 20px;" alt="">
                         <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
@@ -88,3 +88,22 @@
                             su onda correspondiente
                             las particulas materiales obedecen a lo que se llama el principio la primera categoria es la
                             fuerza gravitatoria esta fuerza ea universal
+                            se representa transmitida por una particula de espin 2  llamada gravition.
+                            Esta particula no posee masa propia, por lo que la fuerza que transmite es de largo
+                            alcance.
+                            Se libera energia emitiendose un foton real que puede ser obserbado como la luz por el ojo
+                            humano unos poquos de miles de gev. Pero un maquina fuera lo suficiente potente como para acelerar particulas hasta 
+                            la energia de la gran  unificacion tendria que ser tan grande como el sistema solar y seria dificil que octubiece financion
+                        si la tierra estubiera for mada antineutrones ubiera un universo lleno de radiacion no abria ni galaxias ni estrellas ni planetas donde
+                        sobre la humanidad ubiera desarroyado.
+
+                        <div style="font-size:28px; color:blue">los agujeros negros<div>
+                            <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
+                                <img src="images/Universe_expansion_es.png" style="width: 10px%; margin-top: 20px;" alt="">
+                                <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
+                                    El gas estara tan caliente  que cuando los atomos de hidrogeno choquen ya no saldran
+                                    se formara hielo. El calor desprebenido por la reaccion,que es como una explocion controlada
+                                    de una bonba de hidrogeno hace que la estrella brillante en algunos casos concigen
+                                    explotar o se las reduce su peso por debajo del limite y evitar y evitar asi un catascofrico
+                                    colapso gravitatorio,que sucederia si se anararia mas masa a una enana blanca o a una estrella de
+                                    neutrones de manera que se sobrepasa el limite se colapsaria alcancada una dencidad infinita
