--- a/images/index.html
+++ b/images/index.html
@@ -99,7 +99,7 @@
 
                         <div style="font-size:28px; color:blue">los agujeros negros<div>
                             <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
-                                <img src="images/Universe_expansion_es.png" style="width: 10px%; margin-top: 20px;" alt="">
+                                <img src="images/Universe_expansion_es.png" style="width: 10px% margin-top: 20px;" alt="">
                                 <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
                                     El gas estara tan caliente  que cuando los atomos de hidrogeno choquen ya no saldran
                                     se formara hielo. El calor desprebenido por la reaccion,que es como una explocion controlada
@@ -107,3 +107,11 @@
                                     explotar o se las reduce su peso por debajo del limite y evitar y evitar asi un catascofrico
                                     colapso gravitatorio,que sucederia si se anararia mas masa a una enana blanca o a una estrella de
                                     neutrones de manera que se sobrepasa el limite se colapsaria alcancada una dencidad infinita
+                                     visto desde la nave  el inventervalo de tiempo entre la llegada de ondas susesivas a la nave
+                                     la cencura cosmica porque alguien podria volver a ver su tatara abuela esto que la tierra
+                                     podria la tierra tardaria unos mil billones para que la tierra choque el sol 
+ 
+                                    <div style="font-size:28px; color:blue">los agujeros negros<div>
+                                        <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
+                                            <img src="images/Universe_expansion_es.png" style="width: 10px%; margin-top: 20px;" alt="">
+                                            <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
