--- a/images/index.html
+++ b/images/index.html
@@ -111,7 +111,12 @@
                                      la cencura cosmica porque alguien podria volver a ver su tatara abuela esto que la tierra
                                      podria la tierra tardaria unos mil billones para que la tierra choque el sol 
  
-                                    <div style="font-size:28px; color:blue">los agujeros negros<div>
+                                    <div style="font-size:28px; color:blue">los agujeros negros no son tan negros<div>
                                         <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
                                             <img src="images/Universe_expansion_es.png" style="width: 10px%; margin-top: 20px;" alt="">
                                             <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
+
+                                    conforme el agujero negro pierde masa el area de su orisonte la temperatura la temperatura de un microondas
+                                    disminuria y con el tiempo sera menor que la temperatura sera menor que la de un agujero negro de esas caracteristicas
+                                    perderia masa Pero  inculoso la temperatura seria tan pequena que se nesesitaria un billones de anos y otros 10 billones
+                                    aproxidamaente la edad del universo.           
