--- a/images/index.html
+++ b/images/index.html
@@ -55,7 +55,7 @@
         </div>
         <div style="font-size:28px; color:blue">el universo en expancion<div>
                 <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
-                    <img src="images/Universe_expansion_es.png" style="width: 10px%; margin-top: 20px;" alt="">
+                    <img src="4.png" style="width: 10px%; margin-top: 20px;" alt="">
                     <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
                         friedmman demostro que no se debe esperar estatico. De hecho en 1922 varias semanas antes del
                         descubrimiento de Edwin
@@ -73,7 +73,7 @@
 </html>
 <div class="letra-div">el principio de la incetidumbre<div>
         <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
-            <img src="images/descarga (1).png" style="width: 10px%; margin-top: 20px;" alt="">
+            <img src="5.png" style="width: 10px%; margin-top: 20px;" alt="">
             <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
                 La gente o el mundo Un cojunto de leyes cientificas que nos permiterian predecir
                 todo lo que sucederia en el universo. Lord Rayleigh y sir James Jeans sugierieron
@@ -99,7 +99,7 @@
 
                         <div style="font-size:28px; color:blue">los agujeros negros<div>
                             <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
-                                <img src="images/Universe_expansion_es.png" style="width: 10px% margin-top: 20px;" alt="">
+                                <img src="3.png" style="width: 10px% margin-top: 20px;" alt="">
                                 <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
                                     El gas estara tan caliente  que cuando los atomos de hidrogeno choquen ya no saldran
                                     se formara hielo. El calor desprebenido por la reaccion,que es como una explocion controlada
@@ -113,10 +113,24 @@
  
                                     <div style="font-size:28px; color:blue">los agujeros negros no son tan negros<div>
                                         <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
-                                            <img src="images/Universe_expansion_es.png" style="width: 10px%; margin-top: 20px;" alt="">
+                                            <img src="2.PNG" style="width: 10px%; margin-top: 20px;" alt="">
                                             <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultra-condensed;">
 
                                     conforme el agujero negro pierde masa el area de su orisonte la temperatura la temperatura de un microondas
                                     disminuria y con el tiempo sera menor que la temperatura sera menor que la de un agujero negro de esas caracteristicas
                                     perderia masa Pero  inculoso la temperatura seria tan pequena que se nesesitaria un billones de anos y otros 10 billones
-                                    aproxidamaente la edad del universo.           
+                                    aproxidamaente la edad del universo. 
+                                    
+                                    <div style="font-size:28px; color:blue">el origen de nuestro universo y el destino<div>
+                                        <div style="width:50%; text-align: justify; color:rgb(255, 0, 51);">
+                                            <img src="1.PNG" style="width: 10px%; margin-top: 20px;" alt="">
+                                            <p style="font-family:Arial, Helvetica, sans-serif;font-stretch: ultr-condensed;">
+
+                                              los nucleos no tubiese la suficientemente la energia no tubiese
+                                               para vencer la atracion electromacnetica
+                                               el universo es uncojunto habria seguido expanciondoce y enfriandoce pero en regiones
+                                               tardaria por la atraccion gravitatoria extra
+                                               universo primitivo tan caliente?
+                                                porque es el universo tan uniforme a gran escala?
+                                                porque comenzo el universo con una velosidad de expancion?
+                                                la mayor parte de los cojuntos de valores darian lugar a universos que aun que podria ser muy hermoso
